# faust-protobuf

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: app.py  broker.py  proto_serializer.py  topic_greetings.py
app/proto/: greetings_pb2.py  greetings_pb2.pyi
proto/: greetings.proto
